// todo-service.proto
syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

message User {
    int64 id = 1;
    string name = 2;
    string phone = 3;
    google.protobuf.Timestamp insert_at = 4;
    google.protobuf.Timestamp update_at = 5;
}

message CreateRequest{
    // API versioning
    string api = 1;
    // Task entity to add
    User user = 2;
}

message CreateResponse{
    string api = 1;
    int64 id = 2;
}

message ReadRequest{
    string api = 1;
    int64 id = 2;
}

message ReadResponse{
    string api = 1;
    User user = 2;
}

message UpdateRequest{
    string api = 1;
    User user = 2;
}

message UpdateResponse{
    string api = 1;
    // Number of entities have beed updated
    int64 updated = 2;
}

message DeleteRequest{
    string api = 1;
    int64 id = 2;
}

message DeleteResponse{
    string api = 1;
    int64 deleted = 2;
}

message ReadAllRequest{
    string api = 1;
}

message ReadAllResponse{
    string api = 1;
    repeated User user = 2;
}

// Service to manage user
service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}